# form-builder

./: Makefile  README.md
docker/: .env.example  docker-compose.local.yml  docker-compose.yml
docker/backend/: Dockerfile  entrypoint.local.sh  entrypoint.sh
nginx/: nginx.conf
src/: .flake8  forms.json  pyproject.toml
src/config/: app.py  di.py  settings.py
src/endpoints/: __init__.py  forms.py
src/schemas/: core.py  form.py  parse.py  types.py
src/services/: builders.py  interfaces.py  parsers.py  validators.py
src/utils/: exceptions.py  logging.py  middleware.py  shortcuts.py
